changed the contentType for the ledger content sources
